--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,8 @@
         android:id="@+id/frameLayout"
         android:layout_width="100dp"
         android:layout_height="match_parent"
+        android:layout_marginStart="300dp"
+        android:layout_marginTop="100dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -24,13 +26,16 @@
             android:paddingStart="25dp"
             android:paddingEnd="25dp"
             android:rotation="-90"
-            android:thumb="@drawable/thumb_selector_little" />
+            android:thumb="@drawable/thumb_selector_rd1"
+            android:visibility="invisible"
+            tools:visibility="visible" />
     </FrameLayout>
 
     <FrameLayout
         android:id="@+id/frameLayout2"
         android:layout_width="100dp"
         android:layout_height="match_parent"
+        android:layout_marginTop="100dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/frameLayout"
         app:layout_constraintTop_toTopOf="parent"
@@ -45,13 +50,16 @@
             android:paddingStart="25dp"
             android:paddingEnd="25dp"
             android:rotation="-90"
-            android:thumb="@drawable/thumb_selector_ring"/>
+            android:thumb="@drawable/thumb_selector_rd2"
+            android:visibility="invisible"
+            tools:visibility="visible" />
     </FrameLayout>
 
     <FrameLayout
         android:id="@+id/frameLayout3"
         android:layout_width="100dp"
         android:layout_height="match_parent"
+        android:layout_marginTop="100dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/frameLayout2"
         app:layout_constraintTop_toTopOf="parent"
@@ -66,13 +74,16 @@
             android:paddingStart="25dp"
             android:paddingEnd="25dp"
             android:rotation="-90"
-            android:thumb="@drawable/thumb_selector_middle"/>
+            android:thumb="@drawable/thumb_selector_rd3"
+            android:visibility="invisible"
+            tools:visibility="visible" />
     </FrameLayout>
 
     <FrameLayout
         android:id="@+id/frameLayout4"
         android:layout_width="100dp"
         android:layout_height="match_parent"
+        android:layout_marginTop="100dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/frameLayout3"
         app:layout_constraintTop_toTopOf="parent"
@@ -87,13 +98,16 @@
             android:paddingStart="25dp"
             android:paddingEnd="25dp"
             android:rotation="-90"
-            android:thumb="@drawable/thumb_selector_fore" />
+            android:thumb="@drawable/thumb_selector_rd4"
+            android:visibility="invisible"
+            tools:visibility="visible" />
     </FrameLayout>
 
     <FrameLayout
         android:id="@+id/frameLayout5"
         android:layout_width="100dp"
         android:layout_height="match_parent"
+        android:layout_marginTop="100dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/frameLayout4"
         app:layout_constraintTop_toTopOf="parent"
@@ -108,18 +122,19 @@
             android:paddingStart="25dp"
             android:paddingEnd="25dp"
             android:rotation="-90"
-            android:thumb="@drawable/thumb_selector_thumb" />
+            android:thumb="@drawable/thumb_selector_thumb"
+            android:visibility="invisible" />
     </FrameLayout>
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="522dp"
+        android:layout_width="wrap_content"
         android:layout_height="598dp"
         android:layout_marginLeft="25dp"
         android:orientation="vertical"
         android:padding="25dp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/frameLayout5"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -127,7 +142,7 @@
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="輸入氣壓："
+            android:text="進氣口氣壓(KPa)："
             android:textSize="28sp" />
 
         <TextView
@@ -135,46 +150,105 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
-            android:text="小指氣壓："
+            android:text="通道[1]氣壓(KPa)："
             android:textSize="28sp" />
 
         <TextView
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="名指氣壓："
+            android:text="通道[2]氣壓(KPa)："
             android:textSize="28sp" />
 
         <TextView
             android:id="@+id/textView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="中指氣壓："
+            android:text="通道[3]氣壓(KPa)："
             android:textSize="28sp" />
 
         <TextView
             android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="食指氣壓："
+            android:text="通道[4]氣壓(KPa)："
             android:textSize="28sp" />
 
         <TextView
             android:id="@+id/textView6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="拇指氣壓："
+            android:text="通道[5]氣壓(KPa)："
+            android:textSize="28sp"
+            android:visibility="invisible" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout2"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="25dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/linearLayout"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/INFOR"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0.00"
             android:textSize="28sp" />
+
+        <TextView
+            android:id="@+id/OUT1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:text="0.00"
+            android:textSize="28sp" />
+
+        <TextView
+            android:id="@+id/OUT2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0.00"
+            android:textSize="28sp" />
+
+        <TextView
+            android:id="@+id/OUT3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0.00"
+            android:textSize="28sp" />
+
+        <TextView
+            android:id="@+id/OUT4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0.00"
+            android:textSize="28sp" />
+
+        <TextView
+            android:id="@+id/OUT5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0.00"
+            android:textSize="28sp"
+            android:visibility="invisible" />
 
     </LinearLayout>
 
     <Button
         android:id="@+id/btn_bluetooth"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="80dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:text="Connect"
+        android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
